# nominal-wyvern

./: .gitignore  Binding.hs  ChangeLog.md  LICENSE  Main  Main.hs  Parser.hs  Prelude.wyv  PrettyPrint.hs  README.md  RawSyntax.hs  Syntax.hs  TypeGraph.hs  TypeUtil.hs  Typecheck.hs  cabal.project  hie.yaml  manual_reg.sh  nominal-wyvern.cabal  test.sh
OCamlScripts/: cut_to_depth.ml
app/: Main.hs
examples/: .AB.wyv.swp  AB.wyv  BadEq.wyv  Bank.wyv  Ipair.wyv  Module.wyv  NominalSubtypeTest.wyv  NominalTest.wyv  Ordered.wyv  Set.wyv  Test.wyv  TypeWF.wyv  TypeWFOk.wyv  Unit.wyv  adt.wyv  eqEx.wyv  function.wyv  graph.wyv  graphTest.wyv  list.wyv  list2.wyv  loop.wyv  move.wyv  moveable.wyv  nat.wyv  nestedType.wyv  paths.wyv  simplemoveable.wyv  test1.wyv
examples/Sophia/: BinarySearchTree.wyv  BinaryTree.wyv  CounterExampleToNonRec.wyv  InvalidProgramCounter.wyv  SimpleMutualRecursion.wyv  SimplePair.wyv  ValidProgramCounter.wyv  example.wyv  upperBoundLowerBound.wyv
examples/ThesisExamples/: Fruits.wyv
lib/: Prelude.wyv
src/: Binding.hs  Main.hs  Parser.hs  PrettyPrint.hs  RawSyntax.hs  Syntax.hs  TypeGraph.hs  TypeUtil.hs  Typecheck.hs
tests/: ProgramTests.hs  Spec.hs
