cabal-version:       3.0

name:                nominal-wyvern
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD-3-Clause
license-file:        LICENSE
author:              tmoux
maintainer:          tmou1@swarthmore.edu
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

common common-settings
  default-language: Haskell2010
  ghc-options:

library
  import: common-settings
  exposed-modules:       Binding, Parser, PrettyPrint, RawSyntax, Syntax, TypeGraph, TypeUtil, Typecheck
  other-extensions:    DeriveDataTypeable
  build-depends:       base
                     , cmdargs
                     , parsec
                     , mtl
                     , containers
                     , extra
  hs-source-dirs:      src

executable nominal-wyvern
  import: common-settings
  main-is: Main.hs
  hs-source-dirs: app
  build-depends:
    base,
    cmdargs,
    nominal-wyvern

test-suite nominal-wyvern-test
  import: common-settings
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Spec.hs
  other-modules: ProgramTests

  build-depends:
      base
    , mtl
    , transformers
    , tasty
    , tasty-hunit
    , nominal-wyvern
  ghc-options:
    -O -threaded -rtsopts -with-rtsopts=-N
